--- a/estilos/style.css
+++ b/estilos/style.css
@@ -6,3 +6,50 @@
 .color3 { #b0a18f };
 .color4 { #dfcdb4 };
 .color5 { #fbeed3 }; */
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+body,
+html {
+  background-color: #fbeed3;
+  height: 100vh;
+  width: 100vw;
+}
+
+main {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+}
+
+section#login {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  overflow: hidden;
+  position: absolute;
+  background-color: #fdfdfd;
+  width: 250px;
+  height: 500px;
+  border-radius: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.555);
+}
+
+section#login > div#imagem {
+  display: block;
+  background: #6b5d4d url(../imagens/pattern-bulding.jpg) no-repeat;
+  background-size: cover;
+  background-position: left bottom;
+  height: 200px;
+}
+
+section#login > div#formulario {
+  padding: 10px;
+  display: block;
+}
