--- a/estilos/style.css
+++ b/estilos/style.css
@@ -5,7 +5,7 @@
 .color2 { #6b5d4d };
 .color3 { #b0a18f };
 .color4 { #dfcdb4 };
-.color5 { #fbeed3 }; */
+.color5 { }; */
 
 * {
   margin: 0;
@@ -13,6 +13,9 @@
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+body {
+  background-image: linear-gradient(to top, #fbeed3, #6b5d4d);
 }
 
 body,
@@ -39,6 +42,7 @@ section#login {
   height: 500px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.555);
+  transition: width 0.7s, height 0.7s;
 }
 
 section#login > div#imagem {
