--- a/estilos/style.css
+++ b/estilos/style.css
@@ -39,7 +39,7 @@ section#login {
   position: absolute;
   background-color: #fdfdfd;
   width: 250px;
-  height: 500px;
+  height: 515px;
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.555);
   transition: width 0.7s, height 0.7s;
@@ -65,6 +65,19 @@ div#formulario > h1 {
 
 div#formulario > p {
   font-size: 0.8em;
+}
+
+form > div.campo {
+  background-color: #6b5d4de0;
+  display: block;
+  width: 100%;
+  height: 40px;
+  border-radius: 5px;
+  margin: 5px 0px;
+}
+
+div.campo > label {
+  display: none;
 }
 
 form > input[type="submit"] {
