--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -12,7 +12,8 @@ Grandes telas: acima de 1200px */
     background-image: linear-gradient(to top, #429398, #6b5d4d);
   }
   section#login {
-    width: 90vw;
+    width: 80vw;
+    height: 280px;
   }
 
   section#login > div#imagem {
@@ -24,23 +25,23 @@ Grandes telas: acima de 1200px */
   section#login > div#formulario {
     float: right;
     width: 70%;
-    height: 100%;
   }
 }
 
 @media screen and (min-width: 952px) {
   section#login {
-    width: 990px;
+    width: 950px;
+    height: 350px;
   }
 
   section#login > div#imagem {
-    float: left;
-    width: 40%;
+    float: right;
+    width: 50%;
     height: 100%;
   }
 
   section#formulario > div#formulario {
-    float: right;
+    float: left;
     width: 50%;
   }
   div#formulario > h1 {
@@ -48,5 +49,6 @@ Grandes telas: acima de 1200px */
   }
   div#formulario > p {
     font-size: 1.2em;
+    margin: 20px 0px;
   }
 }
