--- a/estilos/style.css
+++ b/estilos/style.css
@@ -34,7 +34,6 @@ main {
 section#login {
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
   overflow: hidden;
   position: absolute;
   background-color: #fdfdfd;
@@ -43,6 +42,8 @@ section#login {
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.555);
   transition: width 0.7s, height 0.7s;
+  transition-timing-function: ease;
+  transform: translate(-50%, -50%);
 }
 
 section#login > div#imagem {
@@ -68,11 +69,12 @@ div#formulario > p {
 }
 
 form > div.campo {
-  background-color: #6b5d4de0;
+  background-color: #6b5d4d;
+  border: 2px solid #6b5d4d;
   display: block;
   width: 100%;
   height: 40px;
-  border-radius: 5px;
+  border-radius: 8px;
   margin: 5px 0px;
 }
 
@@ -80,6 +82,29 @@ div.campo > label {
   display: none;
 }
 
+div.campo > span {
+  color: white;
+
+  font-size: 2em;
+  width: 40px;
+  padding: 5px;
+  border-radius: 8px;
+}
+
+div.campo > input {
+  background-color: #fbeed3;
+  font-size: 1em;
+  width: calc(100% - 46px);
+  height: 100%;
+  border-radius: 8px;
+  padding: 4px;
+  border: 0px;
+  transform: translateY(-12px);
+}
+div.campo > input:focus-within {
+  background-color: white;
+  border: none;
+}
 form > input[type="submit"] {
   display: block;
   font-size: 1em;
